# pd-sink-box

./: .gitmodules  Dockerfile.pico  README.md  Todo.md  build.sh
build_pico/: .gitignore  pd-sink-box.uf2
enclosure/: .gitattributes  enclosure-bottom-plate.stl  enclosure-lid.stl  enclosure-mid-plate-endcap.stl  enclosure-mid-plate.stl  enclosure.FCStd  encoder-pin-protector.FCStd  encoder-pin-protector.stl
firmware/: CMakeLists.txt  hagl_char_scaled.c  hagl_char_scaled.h  hmi.cpp  hmi.h  main.cpp  make-version-info
